...
              color: preference === 'celsius' ? 'white' : 'black',
            }}>
            °C
          </Text>
        </Pressable>
        <Pressable
          testID="settingsButtonFahrenheit"
          accessibilityState={{ selected: preference === 'fahrenheit' }}
          onPress={() => setPreference('fahrenheit')}
          style={{
            paddingVertical: 16,
            paddingHorizontal: 32,
            backgroundColor: preference === 'fahrenheit' ? '#54AAFF' : 'white',
...
