...
        }}>
        <Text
          style={{ fontSize: 21, paddingHorizontal: 32, textAlign: 'center' }}>
          Current temperature
        </Text>
        <Text
          testID="homeScreenTemperatureMessage"
          style={{
            fontSize: 42,
            paddingHorizontal: 32,
            fontWeight: '600',
            color: 'black',
          }}>
...
